fixed clipping issue in Telegram browser for iOS

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,11 @@
   .contentBody {
     @apply px-5 lg:px-0 max-w-[1000px] w-full grid md:grid-cols-2 gap-8;
   }
+  .contentContainer {
+    @apply w-full h-full mt-20 md:mt-0 md:h-screen overflow-visible bg-[#15274c] text-[#f5ead9];
+  }
 }
+
 
 html {
   width: 100%;
